test/fail/die-err.js

var seneca = require('../..')()

seneca.die( new Error('eek!') )
